Revert 20h20 30/04/2024 On 31/03/24 revert to  30/04/2024. à tester.++ tokenIf/Else, tokenIf +Clone Construct (Stack of indented instructions for parsing)
Signed-off-by: Manuel Daniel Dahmen <manuel.dahmen@gmx.com>